--- a/licenseplate/src/main/res/layout/get_image_layout.xml
+++ b/licenseplate/src/main/res/layout/get_image_layout.xml
@@ -32,6 +32,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </RelativeLayout>
